--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -195,7 +195,7 @@
     <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
       <div id="ProductInfo-{{ section.id }}" class="product__info-container{% if section.settings.enable_sticky_info %} product__info-container--sticky{% endif %}">
         {%- assign product_form_id = 'product-form-' | append: section.id -%}
-        {% render 'skio-plan-picker', start_onetime: false %}
+       
         <div class="trustspot-inline-product" data-product-sku="{{ product.id }}"></div>
         <!-- TrustBox widget - Product Reviews -->
 
@@ -255,6 +255,7 @@
             <div {{ block.shopify_attributes }}>
               {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
               {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
+              {% render 'skio-plan-picker', start_onetime: true %}
                 <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
                 {{ form | payment_terms }}
               {%- endform -%}
