--- a/assets/custom.css
+++ b/assets/custom.css
@@ -92,3 +92,346 @@ display: none;
     border-top: solid 1px #3e3e3e;
     margin-top: 30px;
 }
+
+
+/* 
+* Product Page
+* 
+* Custom skio plan picker
+ */
+ .product__info-wrapper .shopify-app-block > div > div {
+    margin: 0 !important;
+ }
+ .product__info-wrapper .product__title h1 {
+   font-weight: 700;
+   font-size: 36px;
+ }
+
+  .skio-plan-picker .checked-radio-button svg path {
+    fill: #F05423;
+  }
+
+  .skio-plan-picker {
+    flex: 0 0 0 100%;
+  }
+
+  /* 
+  * Icons with text wrap
+  */
+  .product__info-wrapper .icon-with-text-wrap {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-top: 30px;
+    flex-wrap: wrap;
+  }
+  .product__info-wrapper .icon-with-text-wrap .icon-with-text {
+    width: 33.33%;
+    padding: 0 10px;
+  }
+  .product__info-wrapper .icon-with-text-wrap .icon-with-text strong {
+    color: #F05423;
+  }
+  .product__info-wrapper .icon-with-text-wrap .icon-with-text p {
+    margin-top: 10px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  /* 
+  * Guarantee Text
+  */
+  .product__info-container .product__guarantee {
+    margin: 0 !important;
+  }
+  .product__guarantee, .product__guarantee a {
+    display: flex;
+    align-items: center;
+    color: #10A072;
+    text-decoration: none;
+    font-size: 13px;
+  }
+  .product__guarantee svg {
+    margin-right: 10px;
+    max-width: 30px;
+  }
+
+  /* 
+  * Price
+  */
+  .subscription-enabled {
+    text-decoration: none !important;
+  }
+
+  /* 
+  * Shipping Bar 
+  */
+  .shipping-bar {
+    margin: 15px 0 25px;
+    position: relative;
+  }
+  
+  .shipping-bar-bg{
+    width: 100%;
+    height: 8px;
+    border-radius: 10px;
+    background-color: #E1E1DF;
+    display: block;
+    position: relative;
+  }
+  
+  .shipping-tool{
+    position: absolute;
+    width: 3px;
+    height: 100%;
+    display: inline-block;
+    background-color: #999999;
+  }
+  
+  .shipping-bar-price{
+    position: relative;
+    width: 100%;
+    min-width: 100%;
+    display: block;
+    margin-top: 2px;
+  }
+  
+  .shipping-tool-price{
+    position: absolute;
+    width: fit-content;
+    height: auto;
+    font-size: 13px;
+    display: block;
+  }
+  
+  .shipping-tool-price.right{
+    left: 100%;
+  }
+  
+  .shipping-bar .text{
+    font-family: 'Montserrat';
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    margin-bottom: 10px;
+    display: block;
+    color: #000;
+  }
+  
+  .shipping-bar .text b{
+    color: #F05423;
+  }
+
+/* 
+* Product Form
+ */
+.product-form .product-form__submit {
+  background-color: #F05423;
+  --border-opacity: none;
+}
+
+.product-form__quantity-wrapper {
+  display: flex;
+}
+.product-form__quantity-wrapper .product-form__input {
+  flex: none;
+  margin-right: 1em;
+}
+.product-form__quantity-wrapper .product-form__buttons {
+  margin-top: calc(19.5px + 0.6rem);
+  width: 100%;
+  max-width: 44em;
+}
+
+@media (min-width: 990px) {
+  .product-form__quantity-wrapper .product-form__buttons {
+    flex: 0 0 65.5%;
+  }
+}
+@media (max-width: 989px) {
+  .product-form__quantity-wrapper .product-form__buttons {
+    max-width: 100%;
+  }
+}
+
+.product-form__quantity-wrapper .quantity::after{
+  box-shadow: none;
+}
+.product-form__quantity-wrapper .quantity .quantity__button {
+  background-color: #E5E5E5;
+}
+
+/* 
+* Truspost
+ */
+ .trustspot-inline-rating .ts-star::before {
+  color: #F05423;
+ }
+
+ .product__info-wrapper .trustspot-inline-product {
+   margin: 0;
+ }
+ .product__info-wrapper .trustspot-inline-rating {
+   padding: 0;
+ }
+
+
+ /* 
+ * Product Tabs
+ */
+ .product-tabs .tab-content:not(.active) {
+    display: none;
+ }
+ .product-tabs .tab-links { margin-bottom: 30px; }
+ .product-tabs .tab-links a {
+   color: #999999;
+   text-decoration: none;
+   font-size: 13px;
+   text-transform: uppercase;
+   font-weight: 700;
+   margin-right: 24px;
+   border-bottom: 2px solid transparent;
+ }
+ .product-tabs .tab-links a.active {
+   color: #F05423;
+   border-color: #F05423;
+ }
+
+ .title_section{
+  font-size: 16px;
+  font-weight: 700;
+  color: #F05423;
+ }
+
+ .header-title {
+   font-weight: 700;
+   font-size: 24px;
+   margin-top: 0;
+ }
+
+ 
+
+ @media (min-width: 990px) {
+  .product-tabs .tab-links {
+    margin-bottom: 80px;
+  }
+  .product-tabs .tab-links a {
+    font-size: 16px;
+  }
+  .header-title {
+    font-size: 36px;
+  }
+  .description-wrapper {
+    display: flex;
+  }
+  .description-wrapper .description__left {
+    padding-right: 5em;
+  }
+ }
+
+ [image-mobile-selector] .img-fluid {
+   max-width: 100%;
+ }
+
+ /* 
+ * Product Accordion
+  */
+
+
+  .product-accordion .title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+
+  @media (min-width: 989px) {
+    .product-accordion .title {
+      font-size: 24px;
+    }
+  }
+
+  .product-accordion details {
+    border-bottom: 2px solid;
+  }
+ 
+  .icons-list {
+    display: flex;
+    text-align: center;
+    margin-top: 30px;
+    flex-wrap: wrap;
+  }
+  .icons-list .list-item {
+    flex: 0 0 33%;
+  }
+  .icons-list .li_txt {
+    font-size: 12px;
+    color: #000;
+    font-weight: 600;
+  }
+
+  /* 
+  * Product FAQ's 
+  */
+
+  .products-faqs .faq_head h5 {
+    color: #FFC7B6;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 0;
+  }
+
+  .page-accent--dark {
+    background-color: #000;
+    color: #fff;
+  }
+
+  .page-accent--dark .faq_head h1 {
+    color: #fff;
+    margin-top: 0;
+    font-size: 20px
+  }
+
+  .page-accent--dark .accordion details {
+    border-bottom: 2px #fff solid;
+  }
+
+  @media (min-width: 990px) {
+    .page-accent--dark .faq_head h1 {
+      font-size: 36px;
+    }
+  }
+
+
+  /*
+  * Accordion 
+  */
+
+  .accordion {
+    border-top: 0 !important;
+  }
+  .accordion summary {
+    padding: 5px 0;
+    font-weight: 600;
+  }
+
+  .accordion .accordion__content {
+    padding-left: 0;
+    font-size: 14px;
+  }
+
+  .accordion summary:after {
+    content: "\ff0b";
+    position: absolute;
+    right: 0;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    line-height: 16px;
+    font-style: normal;
+    top: 18px;
+  }
+
+  .accordion details[open] summary:after {
+    transform: rotate(45deg);
+  }
