--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -22,6 +22,14 @@
     }
   {%- endstyle -%}
 
+  {% assign product_title_arr = product.title | split: ' ' %}
+
+  {% capture product_title %}
+    {% for word in product_title_arr %}
+      {{ word | capitalize }}
+    {% endfor %}
+  {% endcapture %}
+
   <script src="{{ 'product-form.js' | asset_url }}" defer="defer"></script>
 
   {%- assign first_3d_model = product.media | where: "media_type", "model" | first -%}
@@ -195,32 +203,7 @@
     <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
       <div id="ProductInfo-{{ section.id }}" class="product__info-container{% if section.settings.enable_sticky_info %} product__info-container--sticky{% endif %}">
         {%- assign product_form_id = 'product-form-' | append: section.id -%}
-       
-        <div class="trustspot-inline-product" data-product-sku="{{ product.id }}"></div>
-        <!-- TrustBox widget - Product Reviews -->
-
-        <div class="trustpilot-widget" data-locale="en-GB" data-template-id="544a426205dc0a09088833c6"  data-style-height="700px" data-style-width="100%" data-theme="light" data-sku="{{ variant.sku }}">
-
-            <a href="https://uk.trustpilot.com/review/firstmats.co.uk" target="_blank" rel="noopener">Trustpilot</a>
-            
-    </div>
     
-    <!-- End TrustBox widget -->
-    <div class="icon-with-text-wrap">
-        {% assign icon_with_text = product.metafields.pdp_icon_with_text %}
-        {%- for i in (i..icon_with_text.size) -%}
-            {%- assign iconWithText = 'icon_with_text-' | append : i -%}
-            {% assign iconWithTextVal = product.metafields.pdp_icon_with_text[iconWithText] %}
-            {%- assign image = iconWithTextVal | split: ' | ' | first -%}
-            {%- assign title = iconWithTextVal | split: ' | ' | last -%}
-            {%- if forloop.first != true -%}
-                <div class="icon-with-text">
-                    <img src="{{ image }}" alt="Icon with text" />
-                    <p>{{ title }}</p>
-                </div>
-            {%- endif -%}
-        {%- endfor -%}        
-    </div>
         {%- for block in section.blocks -%}
           {%- case block.type -%}
           {%- when '@app' -%}
@@ -229,12 +212,40 @@
             <p class="product__text{% if block.settings.text_style == 'uppercase' %} caption-with-letter-spacing{% elsif block.settings.text_style == 'subtitle' %} subtitle{% endif %}" {{ block.shopify_attributes }}>
               {{- block.settings.text -}}
             </p>
+          {%- when 'shipping_bar' -%}
+              {%- assign freeShippingPrice = settings.free_shipping_value | plus : 0 | times : 100 -%}
+              <p class="shipping-bar">
+                {% if cart.total_price >= freeShippingPrice %}
+                    <span class="text">You've got free shipping</span> 
+                    <span class="shipping-bar-bg" style="background-color : #f15523"></span>
+                {% elsif cart.total_price < freeShippingPrice %}
+                    {% assign freeShippingPer =  freeShippingPrice | minus : cart.total_price | divided_by: 100 | times: 2 %}
+                    <span class="text">Add <b>$ <span class="left-shipping-price">{{ freeShippingPrice | minus: cart.total_price | money_without_currency }}</span></b> more to your cart for free shipping!</span>
+                    <span class="shipping-bar-bg">
+                        <span class="shipping-tool" style="left: calc(100% - {{ freeShippingPer }}% - 30px);background-color : #999999"></span>
+                    </span>
+                    <span class="shipping-bar-price">
+                        <span class="shipping-tool-price" style="left: 0%;">
+                            $0
+                        </span>
+                        {%- assign checkfreeShippingPer = freeShippingPer | times : 100 -%}
+                        <span class="shipping-tool-price shipping-tool-price-text-wrap" style="left: calc(100% - {{ freeShippingPer }}% - 50px);{% if cart.total_price == 0 %}display:none{% endif %}">
+                            $ <span class="shipping-tool-price-text">{{ cart.total_price | money_without_currency }}</span>
+                        </span>
+                        <span class="shipping-tool-price right" style="left: 95%;">
+                            {{ freeShippingPrice | money_without_trailing_zeros }}
+                        </span>
+                    </span>
+                {% endif %}
+              </p>
+          {%- when 'trustspot_badge' -%}
+            <div class="trustspot-inline-product" data-product-sku="{{ product.id }}"></div>
           {%- when 'title' -%}
             <div class="product__title" {{ block.shopify_attributes }}>
-              <h1>{{ product.title | escape }}</h1>
+              <h1>{{ product_title | escape }}</h1>
               <a href="{{ product.url }}" class="product__title">
                 <h2 class="h1">
-                  {{ product.title | escape }}
+                  {{ product_title | escape }}
                 </h2>
               </a>
             </div>
@@ -255,11 +266,10 @@
             <div {{ block.shopify_attributes }}>
               {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
               {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
-              {% render 'skio-plan-picker', start_onetime: false %}
+              {%- comment -%}{% render 'skio-plan-picker', start_onetime: false %}{%- endcomment -%}
                <input type="hidden" name="variant_id" value="{{ current_variant.id }}" data-js-product-variant-input>
 
                 <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
-                {{ form | payment_terms }}
               {%- endform -%}
             </div>
           {%- when 'description' -%}
@@ -268,8 +278,34 @@
                 {{ product.description }}
               </div>
             {%- endif -%}
+          {%- when 'guarantee_text' -%}
+            <span class="product__guarantee">
+              {% if block.settings.guarantee_url != blank %}
+                <a href="{{ block.settings.guarantee_url }}">
+              {% endif %}
+                {{ block.settings.guarantee_content }}
+              {% if block.settings.guarantee_url != blank %}
+                </a>
+              {% endif %}
+            </span>
           {%- when 'custom_liquid' -%}
             {{ block.settings.custom_liquid }}
+          {%- when 'icons' -%}
+            <div class="icon-with-text-wrap">
+              {% assign icon_with_text = product.metafields.pdp_icon_with_text %}
+              {%- for i in (i..icon_with_text.size) -%}
+                  {%- assign iconWithText = 'icon_with_text-' | append : i -%}
+                  {% assign iconWithTextVal = product.metafields.pdp_icon_with_text[iconWithText] %}
+                  {%- assign image = iconWithTextVal | split: ' | ' | first -%}
+                  {%- assign title = iconWithTextVal | split: ' | ' | last -%}
+                  {%- if forloop.first != true -%}
+                      <div class="icon-with-text">
+                          <img src="{{ image }}" alt="Icon with text" />
+                          <p>{{ title }}</p>
+                      </div>
+                  {%- endif -%}
+              {%- endfor -%}        
+            </div>
           {%- when 'collapsible_tab' -%}
             <div class="product__accordion accordion quick-add-hidden" {{ block.shopify_attributes }}>
               <details id="Details-{{ block.id }}-{{ section.id }}">
@@ -288,7 +324,7 @@
                 </div>
               </details>
             </div>
-          {%- when 'quantity_selector' -%}
+          {%- comment -%}{%- when 'quantity_selector' -%}
             <div class="product-form__input product-form__quantity{% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_vertical_offset < 0 %} product-form__quantity-top{% endif %}" {{ block.shopify_attributes }}>
               <label class="form__label" for="Quantity-{{ section.id }}">
                 {{ 'products.product.quantity.label' | t }}
@@ -312,7 +348,7 @@
                   {% render 'icon-plus' %}
                 </button>
               </quantity-input>
-            </div>
+            </div>{%- endcomment -%}
           {%- when 'popup' -%}
               <modal-opener class="product-popup-modal__opener no-js-hidden quick-add-hidden" data-modal="#PopupModal-{{ block.id }}" {{ block.shopify_attributes }}>
                 <button id="ProductPopup-{{ block.id }}" class="product-popup-modal__button link" type="button" aria-haspopup="dialog">{{ block.settings.text | default: block.settings.page.title }}</button>
@@ -433,45 +469,80 @@
             </noscript>
           {%- when 'buy_buttons' -%}
             <div {{ block.shopify_attributes }}>
-              <product-form class="product-form">
-                <div class="product-form__error-message-wrapper" role="alert" hidden>
-                  <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-error" viewBox="0 0 13 13">
-                    <circle cx="6.5" cy="6.50049" r="5.5" stroke="white" stroke-width="2"/>
-                    <circle cx="6.5" cy="6.5" r="5.5" fill="#EB001B" stroke="#EB001B" stroke-width="0.7"/>
-                    <path d="M5.87413 3.52832L5.97439 7.57216H7.02713L7.12739 3.52832H5.87413ZM6.50076 9.66091C6.88091 9.66091 7.18169 9.37267 7.18169 9.00504C7.18169 8.63742 6.88091 8.34917 6.50076 8.34917C6.12061 8.34917 5.81982 8.63742 5.81982 9.00504C5.81982 9.37267 6.12061 9.66091 6.50076 9.66091Z" fill="white"/>
-                    <path d="M5.87413 3.17832H5.51535L5.52424 3.537L5.6245 7.58083L5.63296 7.92216H5.97439H7.02713H7.36856L7.37702 7.58083L7.47728 3.537L7.48617 3.17832H7.12739H5.87413ZM6.50076 10.0109C7.06121 10.0109 7.5317 9.57872 7.5317 9.00504C7.5317 8.43137 7.06121 7.99918 6.50076 7.99918C5.94031 7.99918 5.46982 8.43137 5.46982 9.00504C5.46982 9.57872 5.94031 10.0109 6.50076 10.0109Z" fill="white" stroke="#EB001B" stroke-width="0.7">
-                  </svg>
-                  <span class="product-form__error-message"></span>
-                </div>
-
-                {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
-                  <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}" disabled>
-                  <div class="product-form__buttons">
-                    <button
-                      type="submit"
-                      name="add"
-                      class="product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout and product.selling_plan_groups == empty %}button--secondary{% else %}button--primary{% endif %}"
-                    {% if product.selected_or_first_available_variant.available == false %}disabled{% endif %}
-                    >
-                        <span>
-                          {%- if product.selected_or_first_available_variant.available -%}
-                            {{ 'products.product.add_to_cart' | t }}
-                          {%- else -%}
-                            {{ 'products.product.sold_out' | t }}
-                          {%- endif -%}
-                        </span>
-                        <div class="loading-overlay__spinner hidden">
-                          <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-                            <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
-                          </svg>
-                        </div>
-                    </button>
-                    {%- if block.settings.show_dynamic_checkout -%}
-                      {{ form | payment_button }}
-                    {%- endif -%}
+                <product-form class="product-form">
+                  <div class="product-form__error-message-wrapper" role="alert" hidden>
+                    <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-error" viewBox="0 0 13 13">
+                      <circle cx="6.5" cy="6.50049" r="5.5" stroke="white" stroke-width="2"/>
+                      <circle cx="6.5" cy="6.5" r="5.5" fill="#EB001B" stroke="#EB001B" stroke-width="0.7"/>
+                      <path d="M5.87413 3.52832L5.97439 7.57216H7.02713L7.12739 3.52832H5.87413ZM6.50076 9.66091C6.88091 9.66091 7.18169 9.37267 7.18169 9.00504C7.18169 8.63742 6.88091 8.34917 6.50076 8.34917C6.12061 8.34917 5.81982 8.63742 5.81982 9.00504C5.81982 9.37267 6.12061 9.66091 6.50076 9.66091Z" fill="white"/>
+                      <path d="M5.87413 3.17832H5.51535L5.52424 3.537L5.6245 7.58083L5.63296 7.92216H5.97439H7.02713H7.36856L7.37702 7.58083L7.47728 3.537L7.48617 3.17832H7.12739H5.87413ZM6.50076 10.0109C7.06121 10.0109 7.5317 9.57872 7.5317 9.00504C7.5317 8.43137 7.06121 7.99918 6.50076 7.99918C5.94031 7.99918 5.46982 8.43137 5.46982 9.00504C5.46982 9.57872 5.94031 10.0109 6.50076 10.0109Z" fill="white" stroke="#EB001B" stroke-width="0.7">
+                    </svg>
+                    <span class="product-form__error-message"></span>
                   </div>
-                {%- endform -%}
-              </product-form>
+
+                  {%- form 'product', product, id: product_form_id, class: 'form', novalidate: 'novalidate', data-type: 'add-to-cart-form' -%}
+                    <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}" disabled>
+                    
+                    <div class="product-form__quantity-wrapper">
+                      <div class="product-form__input product-form__quantity{% if settings.inputs_shadow_vertical_offset != 0 and settings.inputs_shadow_vertical_offset < 0 %} product-form__quantity-top{% endif %}" {{ block.shopify_attributes }}>
+                        <label class="form__label" for="Quantity-{{ section.id }}">
+                          {{ 'products.product.quantity.label' | t }}
+                        </label>
+          
+                        <quantity-input class="quantity">
+                          <button class="quantity__button no-js-hidden" name="minus" type="button">
+                            <span class="visually-hidden">{{ 'products.product.quantity.decrease' | t: product: product.title | escape }}</span>
+                            {% render 'icon-minus' %}
+                          </button>
+                          <input class="quantity__input"
+                              type="number"
+                              name="quantity"
+                              id="Quantity-{{ section.id }}"
+                              min="1"
+                              value="1"
+                              form="{{ product_form_id }}"
+                            >
+                          <button class="quantity__button no-js-hidden" name="plus" type="button">
+                            <span class="visually-hidden">{{ 'products.product.quantity.increase' | t: product: product.title | escape }}</span>
+                            {% render 'icon-plus' %}
+                          </button>
+                        </quantity-input>
+                      </div>
+                      <div class="product-form__buttons">
+                        <button
+                          type="submit"
+                          name="add"
+                          class="product-form__submit button button--full-width {% if block.settings.show_dynamic_checkout and product.selling_plan_groups == empty %}button--secondary{% else %}button--primary{% endif %}"
+                        {% if product.selected_or_first_available_variant.available == false %}disabled{% endif %}
+                        >
+                            <span>
+                              {%- if product.selected_or_first_available_variant.available -%}
+                                {{ 'products.product.add_to_cart' | t }}
+                              {%- else -%}
+                                {{ 'products.product.sold_out' | t }}
+                              {%- endif -%}
+                            </span>
+                            <div class="loading-overlay__spinner hidden">
+                              <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                                <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
+                              </svg>
+                            </div>
+                        </button>
+                        {%- if block.settings.show_dynamic_checkout -%}
+                          {{ form | payment_button }}
+                        {%- endif -%}
+                      </div>
+                    </div>
+
+                    {% comment %}
+                      Automatically inserted by Shop Pay Installments theme updater
+                    {% endcomment %}
+                    {% unless settings.disable_autogenerated_payment_terms %}
+                      {{ form | payment_terms }}
+                    {% endunless %}
+                  {%- endform -%}
+                </product-form>
+              
 
               {{ 'component-pickup-availability.css' | asset_url | stylesheet_tag }}
 
@@ -707,6 +778,11 @@
       "limit": 1
     },
     {
+      "type": "icons",
+      "name": "Icons",
+      "limit": 1
+    },
+    {
       "type": "variant_picker",
       "name": "t:sections.main-product.blocks.variant_picker.name",
       "limit": 1,
@@ -770,6 +846,26 @@
       ]
     },
     {
+     "type": "guarantee_text",
+     "name": "Guarantee text",
+     "settings": [
+      {
+       "type": "textarea",
+        "id": "guarantee_content",
+        "label": "Text"
+      },
+      {
+        "type": "url",
+        "id": "guarantee_url",
+        "label": "Guarantee Url"
+      }
+     ]
+    },
+    {
+     "type": "trustspot_badge",
+      "name": "TrustSpot Badge"
+    },
+    {
       "type": "custom_liquid",
       "name": "t:sections.main-product.blocks.custom_liquid.name",
       "settings": [
@@ -780,6 +876,10 @@
           "info": "t:sections.main-product.blocks.custom_liquid.settings.custom_liquid.info"
         }
       ]
+    },
+    {
+     "type": "shipping_bar",
+     "name": "Shipping Bar"
     },
     {
       "type": "collapsible_tab",
