--- a/sections/product-testimonials.liquid
+++ b/sections/product-testimonials.liquid
@@ -13,20 +13,90 @@
 {%- endstyle -%}
 <div class="product-testimonials page-accent--{{ section.settings.color_accent }}">
   <div class="page-width isolate section-{{ section.id }}-padding">
+    <div class="section-head has-subtext">
+      <h5>Testimonials</h5>
+      <h2 class="h1">What People Are Saying</h2>
+      <p>{{ section.settings.subtext }}</p>
+    </div>
     <div class="page-content-wrapper">
       <div class="content-left">
-        <div class="section-head">
-          <h5>Testimonials</h5>
-          <h2 class="h1">What People Are Saying</h2>
-          <p>{{ section.settings.subtext }}</p>
+        <div class="testimonials-outer-wrap">
+          {% assign testimonials_block = product.metafields.testimonials_block %}
+          {%- for i in (i..testimonials_block.size) -%}
+            {%- assign blockSize = testimonials_block.size -%}
+            {%- assign testimonialsBlock = 'testimonials_block-' | append : i -%}
+            {% assign testimonialsBlockVal = product.metafields.testimonials_block[testimonialsBlock] %}
+            {% assign author_img = testimonialsBlockVal | split: ' | ' | first  %}
+            {% assign author_name_and_text = testimonialsBlockVal | split: ' | ' | last  %}
+            {% assign author_name = author_name_and_text | split : ' & ' | first %}
+            {% assign author_text = author_name_and_text | split : ' & ' | last %}
+            {% if forloop.first != true %}            
+            <div class="testimonials-wrap{% if forloop.index > 3 %} hide{% endif %}" >
+              <div class="testimonial-grid">
+                <div class="image">
+                  <img src="{{ author_img }}" class="testiImage">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11 0C4.925 0 0 4.925 0 11C0 17.075 4.925 22 11 22C17.075 22 22 17.075 22 11C22 4.925 17.075 0 11 0ZM15.768 9.14C15.8558 9.03964 15.9226 8.92274 15.9646 8.79617C16.0065 8.6696 16.0227 8.53591 16.0123 8.40298C16.0018 8.27005 15.9648 8.14056 15.9036 8.02213C15.8423 7.90369 15.758 7.79871 15.6555 7.71334C15.5531 7.62798 15.4346 7.56396 15.3071 7.52506C15.1796 7.48616 15.0455 7.47316 14.9129 7.48683C14.7802 7.50049 14.6517 7.54055 14.5347 7.60463C14.4178 7.66872 14.3149 7.75554 14.232 7.86L9.932 13.019L7.707 10.793C7.5184 10.6108 7.2658 10.51 7.0036 10.5123C6.7414 10.5146 6.49059 10.6198 6.30518 10.8052C6.11977 10.9906 6.0146 11.2414 6.01233 11.5036C6.01005 11.7658 6.11084 12.0184 6.293 12.207L9.293 15.207C9.39126 15.3052 9.50889 15.3818 9.63842 15.4321C9.76794 15.4823 9.9065 15.505 10.0453 15.4986C10.184 15.4923 10.32 15.4572 10.4444 15.3954C10.5688 15.3337 10.6791 15.2467 10.768 15.14L15.768 9.14Z" fill="#F05423"/>
+                  </svg>
+                </div>
+                <div class="image_text">
+                  <div class="name_testimonials">{{ author_name }}</div>
+                  <div class="reviewimage">
+                    <img class="img-fluid" src="https://cdn.shopify.com/s/files/1/1030/5821/files/star.png?v=1646559310">
+                  </div>
+                  <div class="Verified_buyer">Verified buyer</div>
+                </div>
+              </div>
+              <div class="grid_text">
+                <p>{{ author_text }}</p>
+              </div>
+            </div>
+            {%- endif -%}
+          {%- endfor -%} 
         </div>
+        <a href="#" class="review-link" data-text="read more" type="button">
+          Read more reviews
+        </a>
       </div>
       <div class="content-right">
-        
+        <div class="image_video">
+          {% assign poster = "" %}
+          {% if section.settings.video_cover != blank %}
+            {% assign poster = section.settings.video_cover | img_url: 'master' %}
+          {% endif %}
+          <video class="video lazyvideo" poster="{{ poster }}" preload="" width="100%" playsinline>
+            <source type="video/mp4" src="{{ product.metafields.testimonials-video.testimonials-video-url }}">
+          </video>
+          <div class="playpause" style="background-image: url({{ 'icon-play.png' | asset_url }}) ;"></div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  window.addEventListener('load', (event) => {
+    var playButton = document.querySelector(".playpause");
+    var video = document.querySelector('.video');
+    // Event listener for the play/pause button
+    playButton.addEventListener("click", function() {
+      if (video.paused == true) {
+        // Play the video
+        video.play();
+
+        // Update the button text to 'Pause'
+        playButton.classList.add('hidden');
+      }
+    });
+
+    video.addEventListener('click', function() {
+      if (video.paused != true) {
+        video.pause();
+        playButton.classList.remove('hidden');
+      }
+    });
+  });
+</script>
 
 {% schema %}
 {
@@ -51,6 +121,15 @@
       "id": "subtext",
       "label": "Subtext",
       "default": "Wild Willies one-of-a-kind beard oil is made of 10 natural vitamins and organic"
+    },
+    {
+      "type": "header",
+      "content": "Video"
+    },
+    {
+      "type": "image_picker",
+      "id": "video_cover",
+      "label": "Video cover"
     },
     {
       "type": "header",
