--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -330,9 +330,8 @@
            
             
               <img 
-                src="{{ section.settings.footer-logo | image_url: width: 252  }}"
+                src="{{ section.settings.footer_logo | image_url: width: 252  }}"
                 loading="lazy"
-              
                 width="126"
               >
          
@@ -538,7 +537,7 @@
     },
     {
       "type": "image_picker",
-      "id": "footer-logo",
+      "id": "footer_logo",
       "label": "footer logo"
     },
     {
