--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -64,8 +64,7 @@
 
   @media screen and (min-width: 750px) {
     .list-menu__item--link {
-      padding-bottom: 0.5rem;
-      padding-top: 0.5rem;
+      padding: 0;
     }
   }
 </style>
